--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 </div>
 
           
-                <div class="per"><a id="btn-salvar" class="button" >SALVAR</a></div>
-                <div class="per"><a id="btn-deletar" class="button" >DELETAR</a></div>
+                <div class="per"><button id="btn-salvar" class="button" >SALVAR</button></div>
+                <div class="per"><button id="btn-deletar" class="button" >DELETAR</button></div>
             </form>
             <table id="table-register">
                 <thead>
