feat inset u refresh
add e atualiza

--- a/Calc_Notas.html
+++ b/Calc_Notas.html
@@ -104,6 +104,8 @@
               <ons-label for="field-name">Nome da disciplina :</ons-label>
               <ons-input id="field-name" modifier="underbar"  placeholder="Nome da Disciplina" verifica()="required"></ons-input>
           </div>
+
+
           <div class="field-wrapper">
               <ons-label for="field-n_av">Numero de avaliações :</ons-label>
               <ons-input id="field-n_av" modifier="underbar" placeholder="numero de avs" verifica()="required" ></ons-input>
@@ -111,7 +113,7 @@
         </fieldset><br>
 
         <div style="text-align: center">
-           <ons-button type="submit" tappable onclick="get_action()"
+           <ons-button tappable onclick="get_action()"
 > Adicionar</ons-button>
            <br><br>
         <!--  <ons-button  type="submit" id="deletar"> Deletar</ons-button> -->
